--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "history": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.5.0",
     "web-vitals": "^2.1.4"
@@ -18,7 +19,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --watchAll --coverage",
+    "test": "react-scripts test --watchAll=false --coverage",
     "eject": "react-scripts eject",
     "lint": "eslint \"src/**/*.{js,jsx}\"",
     "lint:fix": "eslint \"src/**/*.{js,jsx}\" --fix"
@@ -45,9 +46,9 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "eslint": "^8.54.0",
     "eslint-plugin-react": "^7.33.2",
-    "firebase": "^9.20.0",
-    "react-router-dom": "^6.10.0"
+    "firebase": "^9.20.0"
   }
 }
