--- a/package.json
+++ b/package.json
@@ -43,12 +43,13 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "eslint": "^8.54.0",
     "eslint-plugin-react": "^7.33.2",
-    "firebase": "^9.20.0"
+    "firebase": "^9.20.0",
+    "prettier": "^3.1.1"
   }
 }
