--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint": "^8.54.0",
     "eslint-plugin-react": "^7.33.2",
     "firebase": "^9.20.0",
-    "prettier": "^3.1.1"
+    "prettier": "^3.1.1",
+    "prettier-plugin-organize-imports": "^3.2.4"
   }
 }
